--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="promo">
       <img src="promo1.jpg" alt="Promo 2x1 en Remeras">
       <p><strong>2x1 en Remeras</strong> - Llevate dos remeras al precio de una. ¡Solo por tiempo limitado!</p>
-      <a href="https://wa.me/5491123456789" class="boton">Consultar en WhatsApp</a>
+      <a href="https://wa.me/099266409" class="boton">Consultar en WhatsApp</a>
     </div>
     <div class="promo">
       <img src="promo2.jpg" alt="Descuento en calzado">
       <p><strong>15% OFF en Calzado</strong> - Descuento especial en nuestra colección de zapatillas urbanas.</p>
-      <a href="https://wa.me/5491123456789" class="boton">Consultar en WhatsApp</a>
+      <a href="https://wa.me/099266409" class="boton">Consultar en WhatsApp</a>
     </div>
   </section>
 
@@ -42,3 +42,16 @@
   </footer>
 </body>
 </html>
+<div class="producto">
+    <img src="promo1.jpg" alt="Remera Negra">
+    <h3>Remera Negra</h3>
+    <p>Precio: $1.500</p>
+    <a href="https://wa.me/099266409?text=Hola,%20quiero%20comprar%20la%20Remera%20Negra" class="boton">Comprar por WhatsApp</a>
+</div>
+
+<div class="producto">
+    <img src="promo2.jpg" alt="Zapatillas Blancas">
+    <h3>Zapatillas Blancas</h3>
+    <p>Precio: $4.200</p>
+    <a href="https://wa.me/598XXXXXXXX?text=Hola,%20quiero%20comprar%20las%20Zapatillas%20Blancas" class="boton">Comprar por WhatsApp</a>
+</div>
