--- a/remeras.html
+++ b/remeras.html
@@ -1,4 +1,4 @@
-[22:01, 6/4/2025] Ezequiel  Diaz: <div class="producto">
+ <div class="producto">
     <img src="promo1.jpg" alt="Remera Negra">
     <h3>Remera Negra</h3>
     <p>Precio: $1.500</p>
