--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <p>Moda urbana con estilo propio</p>
     <nav>
       <ul>
-        <li><a href="#remeras">Remeras</a></li>
-        <li><a href="#pantalones">Pantalones</a></li>
-        <li><a href="#calzado">Calzado</a></li>
-        <li><a href="#promociones">Promociones</a></li>
-        <li><a href="#nosotros">Nosotros</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+       <a href="pantalones.html">Pantalones</a>
+<a href="calzado.html">Calzado</a>
+<a href="promociones.html">Promociones</a>
+<a href="nosotros.html">Nosotros</a>
+<a href="contacto.html">Contacto</a>
       </ul>
     </nav>
   </header>
