--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <p>Moda urbana con estilo propio</p>
     <nav>
       <ul>
-       <a href="pantalones.html">Pantalones</a>
-       <a href="calzado.html">Calzado</a>
-       <a href="promociones.html">Promociones</a>
-       <a href="nosotros.html">Nosotros</a>
+      <li><a href="pantalones.html">Pantalones</a></li>
+      <li><a href="calzado.html">Calzado</a></li>
+      <li><a href="promociones.html">Promociones</a></li>
+      <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
     </nav>
   </header>
