--- a/index.html
+++ b/index.html
@@ -35,6 +35,40 @@
     </div>
   </section>
 
+  <section id="nosotros">
+      <h2>Nuestra Historia</h2>
+      <p>Rozer Clothes nació en 2020 en Montevideo, Uruguay, con la visión de ofrecer moda urbana que refleje la autenticidad y el estilo de vida de nuestra comunidad. Inspirados por las calles vibrantes y la cultura local, creamos prendas que combinan comodidad y tendencia.</p>
+
+      <h2>Nuestra Misión</h2>
+      <p>Nos dedicamos a diseñar ropa que empodera a las personas a expresar su individualidad. Creemos en la moda como una forma de arte y comunicación, y trabajamos para que cada prenda cuente una historia única.</p>
+
+      <h2>Nuestros Valores</h2>
+      <ul>
+        <li><strong>Autenticidad:</strong> Celebramos la originalidad y fomentamos la autoexpresión.</li>
+        <li><strong>Calidad:</strong> Nos comprometemos a ofrecer productos de alta calidad que perduren en el tiempo.</li>
+        <li><strong>Comunidad:</strong> Valoramos nuestra conexión con la comunidad local y buscamos inspirar a través de la moda.</li>
+        <li><strong>Sostenibilidad:</strong> Estamos comprometidos con prácticas responsables que minimizan nuestro impacto ambiental.</li>
+      </ul>
+
+      <h2>Conoce al Equipo</h2>
+      <div class="equipo">
+        <div class="miembro">
+          <img src="fundador.jpg" alt="Foto de Juan Pérez">
+          <h3>Juan Pérez</h3>
+          <p>Fundador y Diseñador Principal</p>
+        </div>
+        <div class="miembro">
+          <img src="marketing.jpg" alt="Foto de María Gómez">
+          <h3>María Gómez</h3>
+          <p>Directora de Marketing</p>
+        </div>
+        <!-- Agrega más miembros del equipo según sea necesario -->
+      </div>
+
+      <h2>Logros Destacados</h2>
+      <p>A lo largo de los años, hemos tenido el honor de recibir reconocimientos en la industria de la moda, incluyendo el premio a la "Marca Revelación" en 2023. Además, hemos colaborado con artistas locales para crear colecciones exclusivas que han resonado con nuestra comunidad.</p>
+    </section>
+  
   <footer>
     <p>&copy; 2025 Rozer. Todos los derechos reservados.</p>
   </footer>
